Fork C eng plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=C Engineer: Completed
-author=m0bile btw
-support=https://github.com/m0bilebtw/c-engineer-completed
-description=C Engineer announces when you complete an achievement
-tags=c,engineer,youtube,completed,sound
-plugins=com.github.m0bilebtw.CEngineerCompletedPlugin
+displayName=Pork N Chub
+author=Pandamxnium
+support=
+description=Pork N Chubbers
+tags=
+plugins=com.github.tehelusivepanda.PorkNChubHelper
